1.fixed window open event trigger bug 2.CTable add noWrap property, default true

--- a/src/css/CTable.less
+++ b/src/css/CTable.less
@@ -36,3 +36,15 @@
 .ck-ctable-header {
   border-bottom: none!important;
 }
+
+.ck-ctable-nowrap {
+  th {
+    white-space: nowrap!important;
+  }
+
+  td {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
