--- a/src/css/WModal.less
+++ b/src/css/WModal.less
@@ -6,6 +6,8 @@
   bottom: 0;
   right: 0;
   font-size: .75rem;
+  border-bottom-right-radius: .25rem;
+  border-bottom-left-radius: .25rem;
   .modal {
     position: absolute!important;
   }
